2002-04-04  Yoshinori K. Okuji  <okuji@enbug.org>

	* stage2/builtins.c (setup_func): Don't embed a drive number, if
	unnecessary.
	
2002-03-29  Yoshinori K. Okuji  <okuji@enbug.org>

	* docs/grub.texi (General commands): Added ``pager'' into the
	menu.
	(pager): New subsection.
	(terminal): Added a description about the option
	``--lines=LINES''.

	* configure.in (AC_INIT_AUTOMAKE): Set the version number to
	0.92.
	
2002-03-26  Yoshinori K. Okuji  <okuji@enbug.org>

	* netboot/eepro100.c (eepro100_probe): Increase the delay at the
	initialization.
	
2002-03-26  Yoshinori K. Okuji  <okuji@enbug.org>

	* stage2/boot.c (linux_mem_size): New variable.
	(load_image): Check a mem= option and set LINUX_MEM_SIZE to the
	specified memory size, if any. Otherwise, to zero. When an
	overflow is detected, use LINUX_INITRD_MAX_ADDRESS instead.
	(load_initrd): If LINUX_MEM_SIZE is non-zero, use it instead of
	the actual memory size.
	* stage2/char_io.c (safe_parse_maxint): Use ERR_NUMBER_OVERFLOW
	instead of ERR_NUMBER_PARSING, when an overflow occurs.
	* stage2/common.c [!STAGE1_5] (err_list): Added
	ERR_NUMBER_OVERFLOW.
	* stage2/shared.h (ERR_NUMBER_OVERFLOW): New constant.
	
2002-03-24  Yoshinori K. Okuji  <okuji@enbug.org>

	* stage2/stage2.c (run_menu): Call cls outside the loop to run
	scripts.
	* stage2/cmdline.c (run_script): Prompt a user's intervention,
	only when FALLBACK_ENTRY is negative.
	
2002-02-11  Pavel Roskin  <proski@gnu.org>

	* util/grub-install.in (find_device): New function - find block
	device for given file or directory.  Resolve symlinks to fix
	problem on Linux with devfs and old device names in /etc/fstab.
	Use find_device() for root_device, bootdir_device and
	grubdir_device.

2002-02-08  Yoshinori K. Okuji  <okuji@enbug.org>

	* grub/main.c (OPT_NO_PAGER): New macro.
	(longopts): Added an entry for "--no-pager".
	(usage): Added a description about "--no-pager".
	(main): In case of OPT_NO_PAGER, set USE_PAGER to zero. The same